@@ -1,5 +1,6 @@
 0.3.4+ (in development)
 ------------------------------------------------------------------------
+- Improved: [#12626] Allow using RCT2 saves to mark RCT Classic (.sea) parks as finished and vice versa. 
 
 0.3.4 (2021-07-19)
 ------------------------------------------------------------------------
